--- a/launcher-bootstrap/src/main/resources/com/skcraft/launcher/lang/Bootstrap.properties
+++ b/launcher-bootstrap/src/main/resources/com/skcraft/launcher/lang/Bootstrap.properties
@@ -7,15 +7,15 @@
 button.cancal=Cancel
 
 errorTitle=Error
-errors.failedDownloadError=The SKCraft launcher could not be downloaded.
+errors.failedDownloadError=The Pl3xForge launcher could not be downloaded.
 errors.bootstrapError=An error occurred while trying to bootstrap the launcher\!
 
 errorDialog.reportError=To report this error, provide\:
 
-downloader.title=Downloading SKCraft Launcher...
+downloader.title=Downloading Pl3xForge Launcher...
 downloader.pleaseWait=Please wait...
-downloader.status=Downloading latest SKCraft Launcher...
-downloader.progressStatus=Downloading latest SKCraft Launcher (%.2f%%)...
+downloader.status=Downloading latest Pl3xForge Launcher...
+downloader.progressStatus=Downloading latest Pl3xForge Launcher (%.2f%%)...
 
 progress.confirmCancel=Are you sure that you wish to cancel?
 progress.confirmCancelTitle=Cancel
